Parameterize Jenkins file

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,4 +1,4 @@
 #BrowserName vales can be Chrome, Firefox, Edge, Safari
 BrowserName = Firefox
-applicationURL = https://www.saucedemo.com/
+ApplicationURL = https://www.saucedemo.com/
 WaitTime = 10
