--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
-                    </suiteXmlFiles>
+<!--                    The testFailureIgnore option in the Maven Surefire Plugin controls whether -->
+<!--                    your build fails when tests fail-->
+                    <testFailureIgnore>false</testFailureIgnore>
                 </configuration>
             </plugin>
         </plugins>
